--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
  
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="style.css" />
@@ -29,6 +29,7 @@
 <div class="main_right">
 <h2>H2 Text</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas est mi, consequat eu viverra vel, mattis quis risus. Sed iaculis nunc a enim malesuada vel ornare ante euismod. Donec euismod, enim malesuada gravida sollicitudin, mauris ante commodo massa, a egestas leo erat at lorem. Aenean justo sapien, porta tempor placerat in, iaculis id leo. Quisque non erat ut nibh semper feugiat hendrerit sed neque. Vestibulum eget lectus a erat accumsan ornare non sed nulla. Vestibulum vitae turpis vitae dolor hendrerit pretium quis in odio. Praesent scelerisque, purus ut venenatis elementum, nisl felis ultrices ante, vitae rhoncus lacus massa ut enim. In sed mi arcu. Quisque ultricies pellentesque velit, feugiat viverra est pharetra ac. Quisque id risus eget mi gravida vehicula eget in neque. Integer consectetur, mauris a venenatis dictum, nibh urna tincidunt purus, eu rhoncus ligula erat ac eros. Integer vehicula, arcu a adipiscing sollicitudin, neque erat mollis risus, eget porttitor magna ligula ac justo. Nullam lobortis tortor vitae erat commodo sodales eget non velit. Duis erat tellus, cursus eu egestas id, auctor sit amet lectus. Suspendisse pellentesque ante a leo dignissim at dignissim nibh consectetur. Vestibulum feugiat mattis velit eu luctus. Aliquam nulla leo, ullamcorper feugiat posuere vitae, fringilla eu nibh. </p>
+	
 </div>
 <div class="main_bottom"></div>
 </div>
@@ -38,6 +39,6 @@
 <a href="http://www.bryantsmith.com">website design</a></p>
 </div>
 </div>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"77a9eba6ef86e17c","version":"2022.11.3","r":1,"token":"699048627e364e81b4b0d951dfcc0d1c","si":100}' crossorigin="anonymous"></script>
+
 </body>
 </html>
