--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="dotted_line"></div>
 <div id="main">
 <div class="main_left">
-<img src="sample_image.jpg" alt="Transparent Blue by BryantSmith.com" />
+<img src="643x.jpg" alt="s" />
 <h1>Slogan Here</h1>
 <h3>a longer sub slogan goes right here.</h3>
 </div>
@@ -35,6 +35,7 @@
 </div>
 <div class="dotted_line"></div>
 <div id="footer">
+	
 <p>
 <a href="http://www.bryantsmith.com">website design</a></p>
 </div>
