--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="dotted_line"></div>
 <div id="main">
 <div class="main_left">
-<img src="643x.jpg" alt="s" />
+<img src="643x0w.jpg" alt="s" />
 <h1>Slogan Here</h1>
 <h3>a longer sub slogan goes right here.</h3>
 </div>
