--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <li><a href="#">About</a></li>
 <li><a href="#">Contact</a></li>
 </ul>
-<h1>Transparent Blue</h1>
+<h1>BRAWL STARS!!!</h1>
 </div>
 <div class="dotted_line"></div>
 <div id="main">
