--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" class="hide-scroll">
 <head> 
-    <title>Bakery menu Website Template Live Demo</title>
+    <title>Project</title>
     <meta name="Keywords">
     <meta name="Description">
     
