--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         50%; border: 5px solid #00fea9;" alt="Georgia flag">
       <h1 style="font-size:100px; color:rgb(119, 0, 0); margin:10px;">Visit Georgia</h1>
       <p style="font-size:40px; color: white;"><em>Your ultimate travel guide for the state of Georgia!</em></p>
-    </div>
+	</div></body>
 <body style="margin:0;">
 zs
     
@@ -39,12 +39,10 @@ zs
 
          You may get lost playing disc golf or exploring historic sites and natural wonders. When you resurface, you'll be charmed by this region's small towns, which offer countless culinary delights and cultural hotspots.</p>
       <p><h6>https://www.exploregeorgia.org/things-to-do/list/best-things-to-do-in-east-georgia</h6></p>
-      <p style="line-height: 2.0; font-size:20px;">
-          
-    </div>
-    <!--Footer-->
+	<p style="line-height: 2.0; font-size:20px;">   </p>
+	</div>
+      <!--Footer-->
     <div style="height:auto; background-color:#468a46;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://www.exploregeorgia.org/">exploregeorgia.org</a></h1>
     </div>
-</body>
-</html>
+	</body></html>
