--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
        <a href="page3.html">planner guide</a>
      </nav>
      </h1>
-    </div> 
+</div> 
    
      <!--First section-->
     <div style="background-image: url('tree.jpg');
       background-size: cover; height:480px; padding-top:80px;
       text-align:center;">
-      <img src="flag.jpg" style="height:150px; border-radius:
+      <img src="C:\Users\650872\Documents\Web Design\My_Portfolio\New folder\download.png" style="height:150px; border-radius:
         50%; border: 5px solid #00fea9;" alt="Georgia flag">
       <h1 style="font-size:100px; color:rgb(119, 0, 0); margin:10px;">Visit Georgia</h1>
       <p style="font-size:40px; color: white;"><em>Your ultimate travel guide for the state of Georgia!</em></p>
