--- a/index.html
+++ b/index.html
@@ -10,39 +10,36 @@
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">
       <nav >
       <a href="index.html">home</a> |
-       <a href="page2.html">places to go</a> |
-       <a href="page3.html">planner guide</a>
+       <a href="page2.html">Brawl Star characters</a> |
+       <a href="page3.html">Turtorials videos and more!!!</a>
      </nav>
      </h1>
 </div> 
    
      <!--First section-->
-    <div style="background-image: url('tree.jpg');
+    <div style="background-image: url('maxresdefault.jpg');
       background-size: cover; height:480px; padding-top:80px;
       text-align:center;">
       <img src="C:\Users\650872\Documents\Web Design\My_Portfolio\New folder\download.png" style="height:150px; border-radius:
         50%; border: 5px solid #00fea9;" alt="Georgia flag">
-      <h1 style="font-size:100px; color:rgb(119, 0, 0); margin:10px;">Visit Georgia</h1>
-      <p style="font-size:40px; color: white;"><em>Your ultimate travel guide for the state of Georgia!</em></p>
+      <h1 style="font-size:100px; color:rgb(1, 0, 0); margin:10px;"> Brawl Stars </h1>
+      <p style="font-size:40px; color: white;"><em> orgin of characters!</em></p>
 	</div></body>
 <body style="margin:0;">
-zs
+
     
 
     <!--Second section-->
-    <img src="atlanta.jpg" style="height:400px; margin:100px;
-      float: left;" alt="A pretend invisible person wearing a hat, glasses, and
-      coat." />
+    <img src="Supercell’s-Brawl-Stars-Dev-Team-QA-on-Reddit-Today.webp" style="height:400px; margin:100px;
+      float: left;" alt="Brawl stars dev team pic" />
     <div style="height:600px; margin:100px;">
-      <h1>Explore Georgia</h1>
-      <p style="line-height: 2.0; font-size:20px;">From moss-draped cypress trees to laid-back lake escapes, this region offers all the picturesque beauty its name implies. Relax in a kayak or enjoy an epic game of golf, and get to know the culture-rich communities that make up east Georgia.
-
-         You may get lost playing disc golf or exploring historic sites and natural wonders. When you resurface, you'll be charmed by this region's small towns, which offer countless culinary delights and cultural hotspots.</p>
-      <p><h6>https://www.exploregeorgia.org/things-to-do/list/best-things-to-do-in-east-georgia</h6></p>
+      <h1>What is Brawl Stars?</h1>
+      <p style="line-height: 2.0; font-size:20px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
+      <p><h6>Brawk Stars</h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
       <!--Footer-->
     <div style="height:auto; background-color:#468a46;">
-      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://www.exploregeorgia.org/">exploregeorgia.org</a></h1>
+      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
     </div>
 	</body></html>
