--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
    <meta charset="utf-8">
-   <title>Georgia</title>
+   <title>marcus and eli project</title>
    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
@@ -23,7 +23,7 @@
       <img src="C:\Users\650872\Documents\Web Design\My_Portfolio\New folder\download.png" style="height:150px; border-radius:
         50%; border: 5px solid #00fea9;" alt="Georgia flag">
       <h1 style="font-size:100px; color:rgb(1, 0, 0); margin:10px;"> Brawl Stars </h1>
-      <p style="font-size:40px; color: white;"><em> orgin of characters!</em></p>
+      <p style="font-size:40px; color: white;"><em>Brawl stars orgin of characters!</em></p>
 	</div></body>
 <body style="margin:0;">
 
@@ -35,7 +35,7 @@
     <div style="height:600px; margin:100px;">
       <h1>What is Brawl Stars?</h1>
       <p style="line-height: 2.0; font-size:20px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
-      <p><h6>Brawk Stars</h6></p>
+      <p><h6></h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
       <!--Footer-->
