--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav >
       <a href="index.html">home</a> |
        <a href="page2.html">Brawl Star characters</a> |
-       <a href="page3.html">Turtorials videos and more!!!</a>
+       <a href="page3.html">Turtorials videos andjjj more!!!</a>
      </nav>
      </h1>
 </div> 
