--- a/page2.html
+++ b/page2.html
@@ -6,5 +6,11 @@
 </head>
 
 <body>
+	
+	<nav >
+      <a href="index.html">home</a> |
+       <a href="page2.html">Brawl Star characters</a> |
+       <a href="page3.html">Turtorials videos andjjj more!!!</a>
+     </nav>
 </body>
 </html>
