--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div style="background-image: url('maxresdefault.jpg');
       background-size: cover; height:480px; padding-top:80px;
       text-align:center;">
-      <img src="C:\Users\650872\Documents\Web Design\My_Portfolio\New folder\download.png" style="height:150px; border-radius:
+      <img src="download.png" style="height:150px; border-radius:
         50%; border: 5px solid #00fea9;" alt="Georgia flag">
       <h1 style="font-size:100px; color:rgb(1, 0, 0); margin:10px;"> Brawl Stars </h1>
       <p style="font-size:40px; color: white;"><em>Brawl stars orgin of characters!</em></p>
