--- a/page2.html
+++ b/page2.html
@@ -5,12 +5,26 @@
 <title>Untitled Document</title>
 </head>
 
-<body>
+<body> 
 	
-	<nav >
+	<div style="height:auto; background-color:#468a46;">
+      <h1 style="color:white; padding:40px; margin:0; text-align:center;">
+      <nav >
       <a href="index.html">home</a> |
        <a href="page2.html">Brawl Star characters</a> |
-       <a href="page3.html">Turtorials videos andjjj more!!!</a>
+       <a href="page3.html">Turtorials videos and more!!!</a>
      </nav>
+     </h1>
+</div> 
+		<img src="Supercell’s-Brawl-Stars-Dev-Team-QA-on-Reddit-Today.webp" style="height:200px; margin:70px;
+      float: left;" alt="Brawl stars dev team pic" />
+    <div style="height:600px; margin:100px;">
+      <h2>What is Brawl Stars?</h2>
+      <p style="line-height: 1.5; font-size:15px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
+		<br>
+	
+		
+	</div>
+     
 </body>
 </html>
