--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
       float: left;" alt="Brawl stars dev team pic" />
     <div style="height:600px; margin:100px;">
       <h2>What is Brawl Stars?</h2>
-      <p style="line-height: 1.5; font-size:15px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
+      <p style="line-height: 1.5; font-size:15px;">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
 		<br>
 	
 		
