--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
       <h2>What is Brawl Stars?</h2>
       <p style="line-height: 1.5; font-size:15px;">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
 	</div>
-	<img src="Brawl_Shelly.png" style="height:150px; margin:50px;
+	<img src="poco.png" style="height:150px; margin:50px;
       float: left;" alt="Brawl stars dev team pic" />
     <div style="height:100px; margin:200px;">
       <h2>What is Brawl Stars?</h2>
