--- a/page2.html
+++ b/page2.html
@@ -24,11 +24,9 @@
 	</div>
 	<img src="poco.png" style="height:150px; margin:50px;
       float: left;" alt="Brawl stars dev team pic" />
-    <div style="height:100px; margin:150px; background-color:lightcoral;   "
->
-		 
-      <h2>What is Brawl Stars?</h2>
-      <p style="line-height: 1.5; font-size:15px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
+    <div style="height:150px; margin:150px; background-color:lightcoral;   ">
+		<h2>What is Brawl Stars?</h2>
+      <p style="line-height: 1.5; font-size:20px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
 	
 	</div>
 		
