--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,9 @@
      </h1>
 </div> 
 		
-	
+	<!--Footer-->
+    <div style="height:auto; background-color:#468a46;">
+      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
      
 </body>
 </html>
