--- a/page2.html
+++ b/page2.html
@@ -17,15 +17,16 @@
      </h1>
 </div> 
 		<img src="Brawl_Shelly.png" style="height:150px; margin:50px;
-      float: left;" alt="Brawl stars dev team pic" />
-    <div style="height:100px; margin:100px;">
-      <h2>What is Brawl Stars?</h2>
-      <p style="line-height: 1.5; font-size:15px;">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
+      float: left;margin-top:100px;  margin-left: 100px" alt="Brawl stars dev team pic" />
+    <div style="height:150px; margin-top: 100px; margin-bottom: 100px; background-color:lightcoral;  margin-left: 100px; margin-right:150px ">
+		<h2>Shelly</h2>
+      <p style="line-height: 1.5; font-size:20px;  ">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
+	
 	</div>
 	<img src="poco.png" style="height:150px; margin:50px;
-      float: left;" alt="Brawl stars dev team pic" />
+      float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
     <div style="height:150px; margin:150px; background-color:lightcoral;   ">
-		<h2>What is Brawl Stars?</h2>
+		<h2>Poco</h2>
       <p style="line-height: 1.5; font-size:20px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
 	
 	</div>
