--- a/page2.html
+++ b/page2.html
@@ -23,13 +23,28 @@
       <p style="line-height: 1.5; font-size:20px;  ">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
 	
 	</div>
+	
+	
 	<img src="poco.png" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
-    <div style="height:150px; margin:150px; background-color:lightcoral;   ">
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightcoral;   ">
 		<h2>Poco</h2>
       <p style="line-height: 1.5; font-size:20px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
 	
 	</div>
+	
+	
+	<img src="poco.png" style="height:150px; margin:50px;
+      float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightcoral;   ">
+		<h2>Poco</h2>
+      <p style="line-height: 1.5; font-size:20px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
+	
+	</div>
+	
+	
+	
+	
 		
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
