--- a/page3.html
+++ b/page3.html
@@ -16,7 +16,17 @@
      </nav>
      </h1>
 </div> 
-		
+		<p>
+<b>PRO TIPS FROM PRO PLAYER:</b> <a href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
+<img border="0" alt="W3Schools" src="PROTIP.jpg" width="300" height="300">
+</a>
+</p>
+	<p>
+<b>Turotial on Brawl Stars:</b> <a href="https://www.youtube.com/watch?v=gxUgct_TctA">
+<img border="0" alt="W3Schools" src="HTPBS.JPG" width="300" height="300">
+</a>
+</p>
+
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
