--- a/page3.html
+++ b/page3.html
@@ -27,6 +27,11 @@
 </a>
 </p>
 
+	<p>
+<b>BEST BRAWLER:</b> <a href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
+</a>
+</p>
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
