--- a/page3.html
+++ b/page3.html
@@ -16,6 +16,7 @@
      </nav>
      </h1>
 </div> 
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		<p>
 <b>PRO TIPS FROM PRO PLAYER:</b> <a href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
 <img border="0" alt="W3Schools" src="PROTIP.jpg" width="200" height="200">
