--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      </nav>
      </h1>
 </div> 
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
    
      <!--First section-->
     <div style="background-image: url('maxresdefault.jpg');
