--- a/page2.html
+++ b/page2.html
@@ -34,7 +34,7 @@
 	</div>
 	
 	
-	<img src="download.jfif" style="height:150px; margin:50px;
+	<img src="primo.jpg" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
     <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightcoral;   ">
 		<h2>Poco</h2>
