--- a/page2.html
+++ b/page2.html
@@ -37,8 +37,8 @@
 	<img src="primo.jpg" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
     <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightcoral;   ">
-		<h2>Poco</h2>
-      <p style="line-height: 1.5; font-size:20px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
+		<h2>El Primo</h2>
+      <p style="line-height: 1.5; font-size:20px;">El Primo is a Rare Brawler that has the second-highest health of any Brawler, a high damage output, and great mobility with his Super and his fast movement speed, but a very short attack range. El Primo's Trait allows him to charge his Super from enemies damaging him.</p>
 	
 	</div>
 	
