--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,7 @@
 
 <body> 
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+	
 	<div style="height:auto; background-color:#468a46;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">
       <nav >
@@ -18,7 +19,7 @@
 </div> 
 		<img src="Brawl_Shelly.png" style="height:150px; margin:50px;
       float: left;margin-top:100px;  margin-left: 100px" alt="Brawl stars dev team pic" />
-    <div style="height:150px; margin-top: 100px; margin-bottom: 100px; background-color:lightcoral;  margin-left: 100px; margin-right:150px ">
+    <div style="height:150px; margin-top: 100px; margin-bottom: 100px; background-color:lightsteelblue;  margin-left: 100px; margin-right:150px ">
 		<h2>Shelly</h2>
       <p style="line-height: 1.5; font-size:20px;  ">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
 	
@@ -27,7 +28,7 @@
 	
 	<img src="poco.png" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
-    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightcoral;   ">
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:limegreen;   ">
 		<h2>Poco</h2>
       <p style="line-height: 1.5; font-size:20px;">Poco is a Rare Brawler who has moderately high health and the ability to provide immense healing to his teammates, but very low damage. For his attack, Poco plays his guitarrón, sending damaging musical notes within a wide spread and range.</p>
 	
@@ -36,7 +37,16 @@
 	
 	<img src="primo.jpg" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
-    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightcoral;   ">
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:limegreen;   ">
+		<h2>El Primo</h2>
+      <p style="line-height: 1.5; font-size:20px;">El Primo is a Rare Brawler that has the second-highest health of any Brawler, a high damage output, and great mobility with his Super and his fast movement speed, but a very short attack range. El Primo's Trait allows him to charge his Super from enemies damaging him.</p>
+	
+	</div>
+	
+	
+	<img src="darryl" style="height:150px; margin:50px;
+      float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:limegreen;   ">
 		<h2>El Primo</h2>
       <p style="line-height: 1.5; font-size:20px;">El Primo is a Rare Brawler that has the second-highest health of any Brawler, a high damage output, and great mobility with his Super and his fast movement speed, but a very short attack range. El Primo's Trait allows him to charge his Super from enemies damaging him.</p>
 	
