--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
 	</div>
 	
 	
-	<img src="darryl" style="height:150px; margin:50px;
+	<img src="Darryl (1).png" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
     <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:limegreen;   ">
 		<h2>El Primo</h2>
