--- a/page2.html
+++ b/page2.html
@@ -48,8 +48,7 @@
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
     <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:limegreen;   ">
 		<h2>El Primo</h2>
-      <p style="line-height: 1.5; font-size:20px;">El Primo is a Rare Brawler that has the second-highest health of any Brawler, a high damage output, and great mobility with his Super and his fast movement speed, but a very short attack range. El Primo's Trait allows him to charge his Super from enemies damaging him.</p>
-	
+      <p style="line-height: 1.5; font-size:20px;">Darryl is a Super Rare Brawler who has high health and a high but inconsistent damage output. His Trait helps his Super charge automatically over time. He attacks by shooting shotgun shells that deal very high damage at close-range.</p>
 	</div>
 	
 	
