--- a/page2.html
+++ b/page2.html
@@ -47,8 +47,8 @@
 	
 	<img src="Darryl (1).png" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
-    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:limegreen;   ">
-		<h2>El Primo</h2>
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:dodgerblue;   ">
+		<h2>Darryl</h2>
       <p style="line-height: 1.5; font-size:20px;">Darryl is a Super Rare Brawler who has high health and a high but inconsistent damage output. His Trait helps his Super charge automatically over time. He attacks by shooting shotgun shells that deal very high damage at close-range.</p>
 	</div>
 	
