--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
 
     <!--Second section-->
-    <img src="ballin.png" style="height:400px; margin:100px;
+    <img src="Supercell’s-Brawl-Stars-Dev-Team-QA-on-Reddit-Today.webp" style="height:400px; margin:100px;
       float: left;" alt="Brawl stars dev team pic" />
     <div style="height:600px; margin:100px;">
       <h1>What is Brawl Stars?</h1>
