--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,12 @@
       <p style="line-height: 1.5; font-size:20px;  ">Shelly is a Common Starting Brawler that is unlocked upon beginning the game. She has moderate health and damage output. Her shotgun deals more damage the closer she is to her target, making her excellent for short-range combat. Her attacks have a wide spread as well.</p>
 	
 	</div>
-	
+	<img src="Brawl_Nita.png" style="height:150px; margin:50px;
+      float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:lightsteelblue;   ">
+		<h2>Nita</h2>
+      <p style="line-height: 1.5; font-size:20px;">Her Super summons a massive bear to fight by her side! Nita is a Rare Brawler who has moderately high health and attacks with shockwaves that have moderate range and can hit multiple enemies. She is most notable for her Super's ability to summon "Bruce", a bear that has moderately high health and quick melee attacks.</p>
+	</div>
 	
 	<img src="poco.png" style="height:150px; margin:50px;
       float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
