--- a/page3.html
+++ b/page3.html
@@ -20,18 +20,23 @@
 </div> 
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		<p>
-<b>PRO TIPS FROM PRO PLAYER:</b> <a href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
+<b>PRO TIPS FROM PRO PLAYER:</b><br><a href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
 <img border="0" alt="W3Schools" src="PROTIP.jpg" width="200" height="200">
 </a>
 </p>
 	<p>
-<b>Turotial on Brawl Stars:</b> <a href="https://www.youtube.com/watch?v=gxUgct_TctA">
+<b>Turotial on Brawl Stars:</b> <br> <a href="https://www.youtube.com/watch?v=gxUgct_TctA">
 <img border="0" alt="W3Schools" src="HTPBS.JPG" width="200" height="200">
 </a>
 </p>
 
 	<p>
-<b>BEST BRAWLER:</b> <a href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<b>BEST BRAWLER:</b> <br> <a href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
+</a>
+</p>
+	<p>
+<b>How to Play Mandy</b> <br> <a href="https://www.youtube.com/watch?v=yWkJJ4M7bKs">
 <img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
 </a>
 </p>
