--- a/page3.html
+++ b/page3.html
@@ -20,26 +20,28 @@
 </div> 
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		<p>
-<b>PRO TIPS FROM PRO PLAYER:</b><br><a href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
+<b>PRO TIPS FROM PRO PLAYER:</b><br><a target="_blank" href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
 <img border="0" alt="W3Schools" src="PROTIP.jpg" width="200" height="200">
 </a>
-</p>
+
+	</p>
 	<p>
-<b>Turotial on Brawl Stars:</b> <br> <a href="https://www.youtube.com/watch?v=gxUgct_TctA">
+<b>How to Play Mandy</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=yWkJJ4M7bKs">
+<img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
+</a>
+</p>
+	<p >
+<b>Turotial on Brawl Stars:</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=gxUgct_TctA">
 <img border="0" alt="W3Schools" src="HTPBS.JPG" width="200" height="200">
 </a>
 </p>
 
 	<p>
-<b>BEST BRAWLER:</b> <br> <a href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<b>BEST BRAWLER:</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
 <img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
 </a>
 </p>
-	<p>
-<b>How to Play Mandy</b> <br> <a href="https://www.youtube.com/watch?v=yWkJJ4M7bKs">
-<img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
-</a>
-</p>
+	
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
