--- a/page3.html
+++ b/page3.html
@@ -37,8 +37,8 @@
 </p>
 
 	<p>
-<b>BEST BRAWLER:</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
-<img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
+<b>How to play mandy</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<img border="0" alt="W3Schools" src="MANDY.png" width="200" height="200">
 </a>
 </p>
 	
