--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
 	</p>
 	<p>
 <b>How to Play Mandy</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=yWkJJ4M7bKs">
-<img border="0" alt="W3Schools" src="TRENYTHING.JPG" width="200" height="200">
+<img border="0" alt="W3Schools" src="MANDY.png" width="200" height="200">
 </a>
 </p>
 	<p >
@@ -38,7 +38,7 @@
 
 	<p>
 <b>How to play mandy</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
-<img border="0" alt="W3Schools" src="MANDY.png" width="200" height="200">
+<img border="0" alt="W3Schools" src="TRENYTHING.jpg" width="200" height="200">
 </a>
 </p>
 	
