--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
     <!--Second section-->
     <img src="Supercell’s-Brawl-Stars-Dev-Team-QA-on-Reddit-Today.webp" style="height:400px; margin:100px;
       float: left;" alt="Brawl stars dev team pic" />
-    <div style="height:600px; margin:100px;">
+    <div style="height:480px; margin:100px;margin-bottom:0px;  ">
       <h1>What is Brawl Stars?</h1>
       <p style="line-height: 2.0; font-size:20px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
       <p><h6></h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
-      <!--Footer-->
+     <div style="height:600px; margin:100px;  margin-top: 0px;">
+      <h1>What is Brawl Stars?</h1>
+      <p style="line-height: 2.0; font-size:20px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
+      <p><h6></h6></p>
+	<p style="line-height: 2.0; font-size:20px;">   </p>
+	</div>
+	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
     </div>
