--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
      <div style="height:600px; margin:100px;  margin-top: 0px;">
-      <h1>What is Brawl Stars?</h1>
+      <h1>What is Power League</h1>
       <p style="line-height: 2.0; font-size:20px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
       <p><h6></h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
