--- a/page3.html
+++ b/page3.html
@@ -37,7 +37,7 @@
 </p>
 
 	<p>
-<b>How to play mandy</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<b>Good Bralwers you should get</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
 <img border="0" alt="W3Schools" src="TRENYTHING.jpg" width="200" height="200">
 </a>
 </p>
