--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
       <p><h6></h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
-     <div style="height:600px; margin:100px;  margin-top: 0px;">
+     <div style="height:480px; margin:100px; margin-bottom:  0px; margin-top: 0px;">
       <h1>What is Power League</h1>
-      <p style="line-height: 2.0; font-size:20px;"> Brawl Stars is a multiplayer online battle arena and third-person hero shooter video game developed and published by the Finnish video game company Supercell. It was released worldwide on December 12, 2018, on iOS and Android. The game features various game modes, each with a different objective.</p>
+      <p style="line-height: 2.0; font-size:20px;"> Power League is a competitive ranking system added to the game in season 5. This replaced the Power Play system. Players unlock this system at 4500 trophies. There are a total of 19 ranks between bronze one and master. Each season lasts two months. At the end of a Power League season, players gain Star Points based on their rank. Players can enter Power League solo or with teams of three. The winner is decided on a best-of-three format and ties do not count. Each match starts the game randomly choosing a game mode and map. All players from both teams choose a Brawler to ban. All six players in the match must play with a different Brawler. Players in the team can switch Brawlers with each other if they have the specific Brawler unlocked. Progression is varied based on various factors including the opponents ranks.&nbsp;</p>
+      <p><h6></h6></p>
+	<p style="line-height: 2.0; font-size:20px;"></p>
+	</div>
+<div style="height:400px; margin:90px;  margin-top: 0px;">
+      <h1>What is the brawl pass???</h1>
+      <p style="line-height: 2.0; font-size:20px;"> In May 2020, a game update added a new reward system called <b>Brawl Pass</b>. The Brawl Pass is the game's version of a battle pass. When players compete in battles, they earn Tokens to progress along the Brawl Pass, which the tokens required would exponentially increase per Brawl Pass level. Players can earn credits, chroma credits, Gems, skins, Pins  <b>(emojis) </b> that can be used during battles or in a team game room), Coins, Power Points, and Brawlers from the pass. There are two types of Brawl Pass. All players have the free Brawl Pass by default. Players can purchase the premium Brawl Pass with Gems.&nbsp;</p>
       <p><h6></h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
