--- a/page2.html
+++ b/page2.html
@@ -57,6 +57,12 @@
       <p style="line-height: 1.5; font-size:20px;">Darryl is a Super Rare Brawler who has high health and a high but inconsistent damage output. His Trait helps his Super charge automatically over time. He attacks by shooting shotgun shells that deal very high damage at close-range.</p>
 	</div>
 	
+	 <img src="car.jpg" style="height:150px; margin:50px;
+      float:left; margin-left: 100px	 "  alt="Brawl stars dev team pic" />
+    <div style="height:150px; margin:150px;margin-bottom: 100px;   background-color:dodgerblue;   ">
+		<h2>Carl</h2>
+      <p style="line-height: 1.5; font-size:20px;">Carl is a Super Rare Brawler who has high health and a high but inconsistent damage output. His Trait helps his Super charge automatically over time. He attacks by shooting shotgun shells that deal very high damage at close-range.</p>
+	</div>
 	
 	
 	
