--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-   <meta charset="utf-8">
+   <meta charset="utf-8">1
    <title>marcus and eli project</title>
    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
