--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8">1
    <title>marcus and eli project</title>
    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div style="height:auto; background-color:#468a46;">
