--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body> 
