--- a/page3.html
+++ b/page3.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 
