--- a/page3.html
+++ b/page3.html
@@ -22,24 +22,24 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		<p>
 <b>PRO TIPS FROM PRO PLAYER:</b><br><a target="_blank" href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
-<img border="0" alt="W3Schools" src="PROTIP.jpg" width="200" height="200">
+<img border="0" alt="B0" src="PROTIP.jpg" width="200" height="200">
 </a>
 
 	</p>
 	<p>
 <b>How to Play Mandy</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=yWkJJ4M7bKs">
-<img border="0" alt="W3Schools" src="MANDY.png" width="200" height="200">
+<img border="0" alt="B1" src="MANDY.png" width="200" height="200">
 </a>
 </p>
 	<p >
 <b>Turotial on Brawl Stars:</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=gxUgct_TctA">
-<img border="0" alt="W3Schools" src="HTPBS.JPG" width="200" height="200">
+<img border="0" alt="B2" src="HTPBS.JPG" width="200" height="200">
 </a>
 </p>
 
 	<p>
 <b>Good Bralwers you should get</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
-<img border="0" alt="W3Schools" src="TRENYTHING.jpg" width="200" height="200">
+<img border="0" alt="B3" src="TRENYTHING.jpg" width="200" height="200">
 </a>
 </p>
 	
