--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-   <meta charset="utf-8">1
+   <meta charset="utf-8">
    <title>marcus and eli project</title>
    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 	<link rel="stylesheet" href="style.css">
@@ -23,7 +23,7 @@
       background-size: cover; height:480px; padding-top:80px;
       text-align:center;">
       <img src="download.png" style="height:150px; border-radius:
-        50%; border: 5px solid #00fea9;" alt="Georgia flag">
+        50%; border: 5px solid #00fea9;" alt="Brawlstars">
       <h1 style="font-size:100px; color:rgb(1, 0, 0); margin:10px;"> Brawl Stars </h1>
       <p style="font-size:40px; color: white;"><em>Brawl stars orgin of characters!</em></p>
 	</div></body>
