--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,15 @@
      </nav>
      </h1>
 </div> 
-		<img src="Brawl_Shelly.png" style="height:150px; margin:50px;
+	<div style="background-image: url('maxresdefault.jpg');
+      background-size: cover; height:480px; padding-top:80px;
+      text-align:center;">
+      <img src="download.png" style="height:150px; border-radius:
+        50%; border: 5px solid #00fea9;" alt="Georgia flag">
+      <h1 style="font-size:100px; color:rgb(1, 0, 0); margin:10px;"> Characters&nbsp; </h1>
+      <p style="font-size:40px; color: white;"><em>Brawl stars orgin of characters!</em></p>
+</div>
+<img src="Brawl_Shelly.png" style="height:150px; margin:50px;
       float: left;margin-top:100px;  margin-left: 100px" alt="Brawl stars dev team pic" />
     <div style="height:150px; margin-top: 100px; margin-bottom: 100px; background-color:lightsteelblue;  margin-left: 100px; margin-right:150px ">
 		<h2>Shelly</h2>
