--- a/page3.html
+++ b/page3.html
@@ -5,7 +5,27 @@
 <title>Untitled Document</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
-</head>
+<style>
+img:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+</style>
+	</head>
 
 <body> 
 	
@@ -19,7 +39,15 @@
      </nav>
      </h1>
 </div> 
-	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+	<div style="background-image: url('maxresdefault.jpg');
+      background-size: cover; height:480px; padding-top:80px;
+      text-align:center;">
+      <img src="download.png" style="height:150px; border-radius:
+        50%; border: 5px solid #00fea9;" alt="Georgia flag">
+      <h1 style="font-size:100px; color:rgb(1, 0, 0); margin:10px;"> Tutorials, Videos and More!&nbsp; </h1>
+      <p style="font-size:40px; color: white;"><em>Brawl stars orgin of characters!</em></p>
+</div>
+<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		<p>
 <b>PRO TIPS FROM PRO PLAYER:</b><br><a target="_blank" href="https://www.youtube.com/watch?v=Ar2XDfiHvcs">
 <img border="0" alt="B0" src="PROTIP.jpg" width="200" height="200">
