--- a/page3.html
+++ b/page3.html
@@ -3,11 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 
-<body> 
+<body style="background-color: antiquewhite" > 
 	
 	
 	<div style="height:auto; background-color:#468a46;">
@@ -15,7 +14,7 @@
       <nav >
       <a href="index.html">Home</a> |
        <a href="page2.html">Brawl Star characters</a> |
-       <a href="page3.html">Turtorials videos and more!!!</a>
+       <a href="page3.html">Tutorials videos and more!!!</a>
      </nav>
      </h1>
 </div> 
@@ -32,20 +31,20 @@
 </a>
 </p>
 	<p >
-<b>Turotial on Brawl Stars:</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=gxUgct_TctA">
+<b>Tutortial on Brawl Stars:</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=gxUgct_TctA">
 <img border="0" alt="B2" src="HTPBS.JPG" width="200" height="200">
 </a>
 </p>
 
 	<p>
-<b>Good Bralwers you should get</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
+<b>Good Brawlers you should get</b> <br> <a target="_blank" href="https://www.youtube.com/watch?v=Hs4sLsm95bU">
 <img border="0" alt="B3" src="TRENYTHING.jpg" width="200" height="200">
 </a>
 </p>
 	
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
-      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
+      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a target="_blank" href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
      </div>
 </body>
 </html>
