--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-   <meta charset="utf-8">1
+   <meta charset="utf-8">
    <title>marcus and eli project</title>
    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 	<link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
       <nav >
       <a href="index.html">Home</a> |
        <a href="page2.html">Brawl Star characters</a> |
-       <a href="page3.html">Turtorials videos and more!!!</a>
+       <a href="page3.html">Tutorials videos and more!!!</a>
      </nav>
      </h1>
 </div> 
@@ -52,8 +52,9 @@
       <p><h6></h6></p>
 	<p style="line-height: 2.0; font-size:20px;">   </p>
 	</div>
+<p>Credit to Wikipedia</p>
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
-      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
+      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a target="_blank" href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
     </div>
 	</body></html>
