--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
       <nav >
       <a href="index.html">Home</a> |
        <a href="page2.html">Brawl Star characters</a> |
-       <a href="page3.html">Turtorials videos and more!!!</a>
+       <a href="page3.html">Tutorials videos and more!!!</a>
      </nav>
      </h1>
 </div> 
@@ -70,7 +70,7 @@
 		
 	<!--Footer-->
     <div style="height:auto; background-color:#468a46;">
-      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
+      <h1 style="color:white; padding:40px; margin:0; text-align:center;">learn more at <a target="_blank" href="https://supercell.com/en/games/brawlstars/">Brawl Stars Website</a></h1>
      </div>
 </body>
 </html>
