--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
    <meta charset="utf-8">
-   <title>marcus and eli project</title>
+   <title>Brawl Stars</title>
    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 	<link rel="stylesheet" href="style.css">
 </head>
