--- a/page3.html
+++ b/page3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Bralw Stars</title>
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 <style>
 img:hover {
